--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -157,10 +157,11 @@
     <ClCompile Include="src\coremgr.cpp" />
     <ClCompile Include="src\file\tfir\tfir_beatmap.cpp" />
     <ClCompile Include="src\render\layer.cpp" />
-    <ClCompile Include="src\render\update.cpp" />
+    <ClCompile Include="src\render\playground\r_cursor.cpp" />
     <ClCompile Include="src\work\render.cpp" />
     <ClInclude Include="include\coremgr.h" />
     <ClInclude Include="include\file\tfir\tfir_beatmap.h" />
+    <ClInclude Include="include\game\g_cursor.h" />
     <ClInclude Include="include\game\hitsound.h" />
     <ClInclude Include="include\game\object.h" />
     <ClInclude Include="include\logging.h" />
@@ -176,6 +177,8 @@
     <ClCompile Include="include\utilities.h" />
     <ClCompile Include="src\render\texture.cpp" />
     <ClInclude Include="include\render\layer.h" />
+    <ClInclude Include="include\render\playground\r_cursor.h" />
+    <ClInclude Include="include\rule\skin.h" />
     <ClInclude Include="include\work\render.h" />
   </ItemGroup>
   <ItemGroup>
@@ -185,7 +188,6 @@
     <ClInclude Include="include\config.h" />
     <ClInclude Include="include\exceptions.h" />
     <ClInclude Include="include\render\texture.h" />
-    <ClInclude Include="include\render\update.h" />
     <ClInclude Include="include\rule\difficulty.h" />
     <ClInclude Include="include\rule\file_format.h" />
     <ClInclude Include="include\game\metadata.h" />
