--- a/the-floor-is-rhythm.vcxproj.filters
+++ b/the-floor-is-rhythm.vcxproj.filters
@@ -141,4 +141,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="dependencies\SDL_mixer-build\bin\SDL3_mixer.dll" />
+  </ItemGroup>
 </Project>
