feat (exception): Thêm Log và Exception cho những chỗ TODO chưa có

--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="include\render\cursor\r_cursor.h" />
     <ClInclude Include="include\render\playground\r_object.h" />
     <ClInclude Include="include\rule\skin.h" />
+    <ClInclude Include="include\template.h" />
     <ClInclude Include="include\work\render.h" />
   </ItemGroup>
   <ItemGroup>
