--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{64af4910-bf4c-419a-9cb1-d833d9552d3e}</ProjectGuid>
     <RootNamespace>thefloorisrhythm</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ReplaceWildcardsInProjectItems>true</ReplaceWildcardsInProjectItems>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -98,6 +99,7 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -113,6 +115,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -130,6 +133,7 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -145,6 +149,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -154,67 +159,130 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\rule\skin_format.cpp" />
-    <ClCompile Include="src\skin.cpp" />
-    <ClCompile Include="src\coremgr.cpp" />
-    <ClCompile Include="src\file\tfir\tfir_beatmap.cpp" />
-    <ClCompile Include="src\game\timing.cpp" />
-    <ClCompile Include="src\render\layer.cpp" />
-    <ClCompile Include="src\render\cursor\r_cursor.cpp" />
-    <ClCompile Include="src\render\object.cpp" />
-    <ClCompile Include="src\render\playground\r_hitobject.cpp" />
-    <ClCompile Include="src\work\render.cpp" />
-    <ClInclude Include="include\coremgr.h" />
-    <ClInclude Include="include\file\tfir\tfir_beatmap.h" />
-    <ClInclude Include="include\game\cursor.h" />
-    <ClInclude Include="include\game\hitsound.h" />
-    <ClInclude Include="include\game\hitobject.h" />
-    <ClInclude Include="include\game\timing.h" />
-    <ClInclude Include="include\logger\info.h" />
-    <ClInclude Include="include\logger\logging.h" />
-    <ClCompile Include="src\audio\buses.cpp" />
-    <ClCompile Include="src\audio\memory.cpp" />
-    <ClCompile Include="src\audio\mixer.cpp" />
-    <ClCompile Include="src\file\osu\osu_beatmap.cpp" />
-    <ClCompile Include="src\game\hitsound.cpp" />
-    <ClCompile Include="src\game\metadata.cpp" />
-    <ClCompile Include="src\game\hitobject.cpp" />
-    <ClCompile Include="src\logger\logging.cpp" />
-    <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="include\utilities.h" />
-    <ClCompile Include="src\render\texture.cpp" />
-    <ClInclude Include="include\render\layer.h" />
-    <ClInclude Include="include\render\cursor\r_cursor.h" />
-    <ClInclude Include="include\render\object.h" />
-    <ClInclude Include="include\render\playground\r_hitobject.h" />
-    <ClInclude Include="include\rule\skin_format.h" />
-    <ClInclude Include="include\skin.h" />
-    <ClInclude Include="include\template.h" />
-    <ClInclude Include="include\work\render.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="include\audio\mixer.h" />
-    <ClInclude Include="include\audio\buses.h" />
-    <ClInclude Include="include\audio\memory.h" />
-    <ClInclude Include="include\rule\config.h" />
-    <ClInclude Include="include\logger\exceptions.h" />
-    <ClInclude Include="include\render\texture.h" />
-    <ClInclude Include="include\rule\file_format.h" />
-    <ClInclude Include="include\game\metadata.h" />
-    <ClInclude Include="include\file\osu\osu_beatmap.h" />
-    <ClInclude Include="include\main.h" />
+    <ClCompile Include="src\audio\buses.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\audio\memory.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\audio\mixer.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\coremgr.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\file\osu\beatmap.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\file\tfir\beatmap.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\format\skin.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\game\hitobject.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\game\hitsound.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\game\metadata.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\game\timing.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\logger\logging.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\main.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\render\cursor\cursor.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\render\layer.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\render\object.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\render\playground\hitobject.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\render\texture.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\skin.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\work\render.cpp">
+      <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClInclude Include="include\audio\buses.h">
+    </ClInclude>
+    <ClInclude Include="include\audio\memory.h">
+    </ClInclude>
+    <ClInclude Include="include\audio\mixer.h">
+    </ClInclude>
+    <ClInclude Include="include\config.h">
+    </ClInclude>
+    <ClInclude Include="include\coremgr.h">
+    </ClInclude>
+    <ClInclude Include="include\file\osu\beatmap.h">
+    </ClInclude>
+    <ClInclude Include="include\file\tfir\beatmap.h">
+    </ClInclude>
+    <ClInclude Include="include\format\file.h">
+    </ClInclude>
+    <ClInclude Include="include\format\skin.h">
+    </ClInclude>
+    <ClInclude Include="include\game\cursor.h">
+    </ClInclude>
+    <ClInclude Include="include\game\hitobject.h">
+    </ClInclude>
+    <ClInclude Include="include\game\hitsound.h">
+    </ClInclude>
+    <ClInclude Include="include\game\metadata.h">
+    </ClInclude>
+    <ClInclude Include="include\game\timing.h">
+    </ClInclude>
+    <ClInclude Include="include\logger\exceptions.h">
+    </ClInclude>
+    <ClInclude Include="include\logger\info.h">
+    </ClInclude>
+    <ClInclude Include="include\logger\logging.h">
+    </ClInclude>
+    <ClInclude Include="include\main.h">
+    </ClInclude>
+    <ClInclude Include="include\render\cursor\cursor.h">
+    </ClInclude>
+    <ClInclude Include="include\render\layer.h">
+    </ClInclude>
+    <ClInclude Include="include\render\object.h">
+    </ClInclude>
+    <ClInclude Include="include\render\playground\hitobject.h">
+    </ClInclude>
+    <ClInclude Include="include\render\texture.h">
+    </ClInclude>
+    <ClInclude Include="include\skin.h">
+    </ClInclude>
+    <ClInclude Include="include\template.h">
+    </ClInclude>
+    <ClInclude Include="include\utilities.h">
+    </ClInclude>
+    <ClInclude Include="include\work\render.h">
+    </ClInclude>
   </ItemGroup>
   <!-- After Build -->
   <ItemGroup>
     <SDL3MixerDLL Include="dependencies\SDL_mixer-build\bin\SDL3_mixer.dll" />
-    <Assets Include="assets\**\*" />
   </ItemGroup>
   <Target Name="CopySDL3MixerDll" AfterTargets="Build">
     <Copy SourceFiles="@(SDL3MixerDLL)" DestinationFolder="$(OutDir)" />
   </Target>
   <Target Name="CopyAssets" AfterTargets="Build">
-    <MakeDir Directories="$(OutDir)assets" />
-    <Copy SourceFiles="@(Assets)" DestinationFolder="$(OutDir)assets\" />
+    <Exec Command="xcopy /E /I /Y assets $(OutDir)assets\" />
   </Target>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
