(nocheck) feat: Thêm Screen, RenderObjectCollection, PolyRenderObject; refactor: Tái cấu trúc RenderBuffer
nah đây là tóm tắt commit ai đã viết:
- Cập nhật các thành phần hiển thị con trỏ để sử dụng hệ thống tập hợp mới (cải thiện tổ chức và hiệu suất hiển thị).
- Giới thiệu MapsetCollection mới để quản lý các hit object trong các lớp (tăng tính module và khả năng bảo trì).
- Thay thế RenderHitObject bằng RenderFloor và RenderSlider trong cấu trúc mapset mới (đơn giản hóa quá trình hiển thị hit object).
- Thêm các hàm tiện ích cho các thao tác với SDL_FPoint (giúp xử lý toán học điểm đơn giản hơn).
- Loại bỏ các file tiêu đề và nguồn hit object đã lỗi thời (dọn dẹp codebase).

QUAN TRỌNG: Hệ thống hiển thị đã được tái cấu trúc đáng kể, yêu cầu cập nhật bất kỳ đoạn mã nào phụ thuộc vào nó.

--- a/the-floor-is-rhythm.vcxproj.filters
+++ b/the-floor-is-rhythm.vcxproj.filters
@@ -72,7 +72,13 @@
     <ClCompile Include="src\structures\render\cursor\cursor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\structures\render\playground\hitobject.cpp">
+    <ClCompile Include="src\structures\render\playground\mapset.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\structures\render\collection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\structures\screens\screen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -152,10 +158,16 @@
     <ClInclude Include="include\structures\render\cursor\cursor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\structures\render\playground\hitobject.h">
+    <ClInclude Include="include\structures\render\playground\mapset.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\utilities.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\structures\screens\screen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\structures\render\collection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
