--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -159,6 +159,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\structures\render\collection.cpp" />
     <ClCompile Include="src\structures\audio\buses.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
@@ -207,7 +208,7 @@
     <ClCompile Include="src\structures\render\object.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\structures\render\playground\hitobject.cpp">
+    <ClCompile Include="src\structures\render\playground\mapset.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
     <ClCompile Include="src\structures\render\texture.cpp">
@@ -216,6 +217,7 @@
     <ClCompile Include="src\skin.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
+    <ClCompile Include="src\structures\screens\screen.cpp" />
     <ClCompile Include="src\work\render.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
@@ -261,12 +263,14 @@
     </ClInclude>
     <ClInclude Include="include\structures\render\object.h">
     </ClInclude>
-    <ClInclude Include="include\structures\render\playground\hitobject.h">
+    <ClInclude Include="include\structures\render\collection.h" />
+    <ClInclude Include="include\structures\render\playground\mapset.h">
     </ClInclude>
     <ClInclude Include="include\structures\render\texture.h">
     </ClInclude>
     <ClInclude Include="include\skin.h">
     </ClInclude>
+    <ClInclude Include="include\structures\screens\screen.h" />
     <ClInclude Include="include\template.h">
     </ClInclude>
     <ClInclude Include="include\utilities.h">
